# Spark_course_ABD

./: .gitignore  01_start.py  pyproject.toml
day_01/: 01_start.py  01_task1.py
day_04/: 04_dataframe.py  04_dataframe_filter.py  04_rdd_filter.py  04_rdd_map.py  04_rdd_sum.py  04_task.py
day_07/: task_01.py
day_08/: task_01.py
day_09/: task_01.py
day_10/: task_01.py
