[tool.poetry]
name = "spark-course-abd"
version = "0.1.0"
description = ""
authors = ["Rafal Kowalski <rafal.kowalski@rkowalski.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.3"
jupyterlab = "^4.2.5"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"
mypy = "^1.13.0"
isort = "^5.13.2"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
